--- a/index.html
+++ b/index.html
@@ -225,29 +225,27 @@
                         <img src="images/profile-1.jpeg" alt="">
                         <div class="text">Siddhant Tiwari</div>
                         <p>B.Tech Computer Science Eng</p>
-                        <p>SDET , Cvent</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Sudhanshu shekar</div>
-                        <p>B.Tech Chemical Engineering</p>
-                        <p>Business Analyst , Adventour Club</p>
+                        <div class="text">Siddhant Tiwari</div>
+                        <p>B.Tech Computer Science Eng</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Siddhant Tiwari</div>
+                        <p>B.Tech Computer Science Eng</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Siddhant Tiwari</div>
+                        <p>B.Tech Computer Science Eng</p>
                     </div>
                 </div>
             </div>
@@ -267,7 +265,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Sudhanshu Shekhar</div>
+                                <div class="sub-title">Siddhant Tiwari</div>
                             </div>
                         </div>
                         <div class="row">
@@ -288,7 +286,7 @@
                 </div>
                 <div class="column right scroll-in">
                     <div class="text">Message me</div>
-                    <form action="https://formsubmit.co/99e60cfae9e1c5a272a94be5448f1821" method="POST">
+                    <form action="https://formsubmit.co/siddhant.9tiwari@gmail.com" method="POST">
 
                     <!-- Honeypot -->
                     <input type="text" name="_honey" style="display: none;">
