--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <!-- Disable Captcha -->
                     <input type="hidden" name="_captcha" value=" false">
 
-                    <input type="hidden" name="_next" value="http://localhost/HireHack/index.html">
+                    <input type="hidden" name="_next" value="https://siddhanttiwari09.github.io/Hirehack/">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
