--- a/index.html
+++ b/index.html
@@ -296,14 +296,14 @@
                     <input type="hidden" name="_next" value="https://siddhanttiwari09.github.io/Hirehack/">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Name" name="Name" required>
                             </div>
                             <div class="field">
                                 <input type="tel" placeholder="Phone number" name="Phone&nbsp;number" required>
                             </div>
                         </div>
                         <div class="field email">
-                            <input type="email" placeholder="Email" required>
+                            <input type="email" placeholder="Email" required name="Email">
                         </div>
                         <tr>
                         <div class="job">Job Role -  </div>
