--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </div>
                         </tr>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="Message" required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
