--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             </div>
                         </div>
                         <div class="field email">
-                            <input type="email" placeholder="Email" required name="Email">
+                            <input type="email" placeholder="Email" required name="Email" required>
                         </div>
                         <tr>
                         <div class="job">Job Role -  </div>
